8368175: A quiet Maven build on JDK 25
Every mvn run printed eight WARNING lines from Maven's own libraries -
jansi loading its native console binding, and guava's AbstractFuture
using sun.misc.Unsafe - which JDK 25 reports for code that has not
opted in. Nothing in the project is involved. .mvn/jvm.config now hands
Maven's JVM --enable-native-access=ALL-UNNAMED and
--sun-misc-unsafe-memory-access=allow; both need JDK 23+, which the
enforcer already requires.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MroqvAFoC5CLSBtnh57oaE